# 15-n-puzzles

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  Game.cpp  Game.h  README.md  gen.py  main.cpp  settings.h
